--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
